--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
             </div>
         </div>
     </section>
+    <section id="banner">
+        
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
