--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
             </ul>
         </div>
+        <div id="mobile">
+            <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+        </div>
     </header>
 
     <section id="hero">
