--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </div>
         <div id="mobile">
             <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
-            <i id="bar" class="fas fa-outdent"></i>
+            <i id="bar" class="fa-solid fa-bars"></i>
+            <!-- <i id="bar" class="fas fa-outdent"></i> -->
         </div>
     </header>
 
