--- a/index.html
+++ b/index.html
@@ -83,22 +83,24 @@
         <h2>Fuature Products</h2>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
-            <div class="pro">
-                <img src="./img/products/f1.jpg" alt="" srcset="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+            <a href="sproduct.html" style="text-decoration: none;">
+                <div class="pro">
+                    <img src="./img/products/f1.jpg" alt="" srcset="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
                     </div>
-                    <h4>$78</h4>
+                    <a href=""><i class="fas fa-shopping-cart cart1"></i></a>
                 </div>
-                <a href="#"><i class="fas fa-shopping-cart cart1"></i></a>
-            </div>
+            </a>
             <div class="pro">
                 <img src="./img/products/f2.jpg" alt="" srcset="">
                 <div class="des">
