--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    <title>Document</title>
+    <title>Ecommerce</title>
 </head>
 
 <body>
@@ -215,6 +215,7 @@
             </div>
         </div>
     </section>
+    
     <section id="banner" class="section-m1">
         <h4>Repair Services</h4>
         <h2>Up to <span>70% off</span> - All t-shirt & Accessories</h2>
