--- a/sproduct.html
+++ b/sproduct.html
@@ -78,6 +78,77 @@
             <span>The Gildan Ultra Cotton T-shirt is made from a substantial 6.0 oz. persq . yd. fabric constructed comfort with each wear. Featuring a taped nect and shoulder, and a seamless double-needle collar, and available in a range of colors,it offers it all in the ultimate head-turinin package.</span>
         </div>
     </section>
+    <section id="product1" class="section-p1">
+        <h2>New Arrivals</h2>
+        <p>Summer Collection New Morden Design</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./img/products/n1.jpg" alt="" srcset="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart1"></i></a>
+            </div>
+            <div class="pro">
+                <img src="./img/products/n2.jpg" alt="" srcset="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart1"></i></a>
+            </div>
+            <div class="pro">
+                <img src="./img/products/n3.jpg" alt="" srcset="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart1"></i></a>
+            </div>
+
+            <div class="pro">
+                <img src="./img/products/n4.jpg" alt="" srcset="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart1"></i></a>
+            </div>
+                </div>
+    </section>
 
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
