--- a/sproduct.html
+++ b/sproduct.html
@@ -209,7 +209,22 @@
         </div>
     </footer>
 
-
+<script>
+    var MainImag=document.getElementById('MainImg');
+    var smallimg=document.getElementsByClassName("small-img");
+    smallimg[0].onclick=function(){
+        MainImag.src=smallimg[0].src;
+    }
+    smallimg[1].onclick=function(){
+        MainImag.src=smallimg[0].src;
+    }
+    smallimg[2].onclick=function(){
+        MainImag.src=smallimg[0].src;
+    }
+    smallimg[3].onclick=function(){
+        MainImag.src=smallimg[0].src;
+    }
+</script>
 
     <script src="./script.js"></script>
 </body>
