--- a/sproduct.html
+++ b/sproduct.html
@@ -224,6 +224,7 @@
     smallimg[3].onclick=function(){
         MainImag.src=smallimg[3].src;
     }
+    console.log("Hello wolrd")
 </script>
 
     <script src="./script.js"></script>
